# Vst

./: .clang-format  .gitignore  ALGORITHMS.md  ARCHITECTURE.md  BENCHMARK_STATUS.md  BUILD.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Makefile  NATRON_BENCHMARK_CMAKE.md  NATRON_BENCHMARK_README.md  NATRON_BENCHMARK_START.md  NATRON_BENCHMARK_SUITE.md  NATRON_DELIVERY_SUMMARY.md  OPENCL_BUILD_FIX_SUMMARY.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_NATRON_INDEX.md  SESSION_PROGRESS.md  benchmark_correct_id.py  benchmark_demo.py  benchmark_output.txt  benchmark_project.py  benchmark_simple.py  debug_log.txt  install_intensity_plugin.ps1  install_raw_intensity_plugin.ps1  list_plugins.py  minimal_natron.py  natron_benchmark.py  natron_benchmark.py.bak  natron_benchmark_analysis.py  natron_benchmark_fixed.py  natron_benchmark_gpu_cpu.py  natron_benchmark_proper.py  natron_benchmark_simple.py  natron_benchmark_timed.py  run_gpu_cpu_benchmark.py  (+14 more)
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
Source/: CircuitModels.cpp  CircuitModels.h  JuceHeader.h  NonlinearStateSpace.cpp  NonlinearStateSpace.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SaturationEngine.cpp  SaturationEngine.h  WaveDigitalFilter.cpp  WaveDigitalFilter.h
build_ofx/: Makefile
build_ofx/ofx_support/: Makefile
cmake/: FetchVST3SDK.cmake  Vst3Packaging.cmake
include/: AdaaWaveshaper.h  AnalogCircuitModel.h  AnalogSaturationController.h  AnalogSaturationProcessor.h  Biquad.h  CPURenderer.h  IntensityProfilePlotterInteract.h  IntensitySampler.h  PluginVersion.h.in  SaturationController.h  SaturationParameters.h  SaturationProcessor.h
kernels/: intensitySampler.cl  intensitySampler.metal
natron_benchmark_results/: benchmark_20251209_235037.json  benchmark_20251209_235145.json  benchmark_20251210_000009.json  benchmark_20251210_004142.json  benchmark_20251210_053229.json  benchmark_20251210_053349.csv  benchmark_20251210_053349.json  benchmark_20251210_061145.json  benchmark_config_20251210_001413.json  benchmark_opencl_20251210_060011.json  benchmark_opencl_20251210_061324.csv  benchmark_opencl_20251210_061324.json  test_plugins_results.json
ofx/: CMakeLists.txt  CRASH_INVESTIGATION.md  GPU_ASYNC_QUEUE_CRITICAL_FIX.md  Info.plist  Makefile  OFX_OPTIMIZATION_REVIEW.md  OPTIMIZATIONS.md  README.md  benchmark_harness.cpp
ofx/IntensityProfilePlotter.ofx.bundle/Contents/: Info.plist
ofx/include/: CPURenderer.h  GPURenderer.h  IntensityProfilePlotterInteract.h  IntensityProfilePlotterPlugin.h  IntensitySampler.h  ProfilePlotter.h
ofx/src/: CPURenderer.cpp  GPURenderer.cpp  IntensityProfilePlotterInteract.cpp  IntensityProfilePlotterPlugin.cpp  IntensitySampler.cpp  ProfilePlotter.cpp
ofx_raw_api/: CMakeLists.txt
ofx_raw_api/include/: IntensityProfilePlotterRaw.h
ofx_raw_api/src/: IntensityProfilePlotterRaw.cpp
ofx_support/: Makefile
plugin/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  Info.plist  README.md
plugin/include/: GPURenderer.h  IntensityProfilePlotterPlugin.h  ProfilePlotter.h
plugin/src/: CPURenderer.cpp  GPURenderer.cpp  ProfilePlotter.cpp
resources/: Info.json.in
src/: AdaaWaveshaper.cpp  AnalogCircuitModel.cpp  AnalogSaturationController.cpp  AnalogSaturationController.h  AnalogSaturationFactory.cpp  AnalogSaturationIDs.h  AnalogSaturationProcessor.cpp  AnalogSaturationProcessor.h  Biquad.cpp  CMakeLists.txt  IntensityProfilePlotterInteract.cpp  IntensityProfilePlotterPlugin.cpp  IntensitySampler.cpp  SaturationController.cpp  SaturationParameters.cpp  SaturationProcessor.cpp  entry.cpp  factory.cpp  version.h
src/dsp/: AdaptiveBiasFilter.cpp  AdaptiveBiasFilter.h  AnalogSaturationModel.cpp  AnalogSaturationModel.h  NonLinearStages.cpp  NonLinearStages.h  TiltEQ.cpp  TiltEQ.h  Utilities.cpp  Utilities.h
vst/: README.md
vst/cmake/: FetchVST3SDK.cmake
vst/src/dsp/: SaturationModel.cpp
vst_codex/: CMakeLists.txt
vst_codex/cmake/: FetchVST3SDK.cmake
vst_codex/include/: AnalogSaturationIDs.h  AnalogSaturationProcessor.h
vst_codex/include/dsp/: SaturationModel.h
vst_codex/src/: AnalogSaturationController.cpp  AnalogSaturationFactory.cpp  AnalogSaturationProcessor.cpp
vst_juce/: CMakeLists.txt
